version compatible with cdb 3